--- a/App/index.html
+++ b/App/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/img/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/img/logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/styles/vars.scss">
     <title>WeStiti</title>
