--- a/App/index.html
+++ b/App/index.html
@@ -2,10 +2,8 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    
-    <link rel="icon" type="image/webp" href="/logo.webp" />
+    <link rel="icon" type="image/x-icon" href="/favicon_io/favicon-16x16.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./src/styles/vars.scss">
     <title>WeStiti</title>
   </head>
   <body>
